# ConsoleSbig

./: CMakeCache.txt  CMakeLists.txt  ConsoleSbig  Makefile  Makefile_easy  README.md  cmake_install.cmake
src/: ConsoleSbig.cpp  getImage.cpp  getImage.h  splash.cpp  splash.h
